simple colors working, max string length ensured

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "private": false,
   "dependencies": {
     "chalk": "^4.1.0",
+    "cli-truncate": "^2.1.0",
     "string-width": "^4.2.0"
   },
   "devDependencies": {
