--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,6 @@
     "@awdware/eslint-config-nodejs"
   ],
   "rules": {
-    "switch-colon-spacing": "warn",
-    "indent": [
-      2,
-      {
-        "SwitchCase": 0
-      }
-    ]
+    "switch-colon-spacing": "warn"
   }
 }
