--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "test": "",
     "build": "tsc -p ."
   },
-  "author": "LoaderB0T",
   "license": "MIT",
   "private": false,
   "dependencies": {
@@ -31,5 +30,32 @@
     "legally": "^3.5.8",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
+  },
+  "keywords": [
+    "log",
+    "logging",
+    "logger",
+    "awesome",
+    "spinner",
+    "progress",
+    "interactive",
+    "enquirer",
+    "inquirer",
+    "typescript",
+    "multi",
+    "multiline",
+    "advanced"
+  ],
+  "author": {
+    "name": "Janik Schumacher (LoaderB0T)",
+    "url": "https://twitter.com/TheLoaderB0T"
+  },
+  "homepage": "https://github.com/LoaderB0T/awesome-logging",
+  "bugs": {
+    "url": "https://github.com/LoaderB0T/awesome-logging/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LoaderB0T/awesome-logging.git"
   }
 }
