--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "cli-truncate": "^2.1.0",
+    "restore-cursor": "^3.1.0",
     "slice-ansi": "^4.0.0",
     "string-width": "^4.2.0",
     "strip-ansi": "^6.0.0"
