--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
   },
   "devDependencies": {
     "@awdware/eslint-config-nodejs": "^0.0.6",
+    "@awdware/prettier-config": "^0.0.2",
     "@types/node": "^14.14.20",
     "@types/slice-ansi": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.17.0",
     "legally": "^3.5.9",
+    "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
+  "prettier": "@awdware/prettier-config",
   "keywords": [
     "log",
     "logging",
