--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,18 +3,12 @@
     "target": "es5",
     "module": "commonjs",
     "baseUrl": "./",
-    "lib": [
-      "es6",
-      "es2015",
-      "dom"
-    ],
+    "lib": ["es6", "es2015", "dom"],
     "declaration": true,
     "outDir": "lib",
     "rootDir": "./src",
     "strict": true,
-    "types": [
-      "node"
-    ],
+    "types": ["node"],
     "sourceMap": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
@@ -23,7 +17,5 @@
     "emitDecoratorMetadata": true,
     "moduleResolution": "node"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
