--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "awesome-logging",
-  "version": "0.0.1-pre2",
+  "version": "0.0.1",
   "description": "Advanced logging messages, interactive prompts, loading animations and more in TypeScript",
   "main": "lib/index.js",
   "files": [
