exporting stuff & marked as internal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "strictPropertyInitialization": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "stripInternal": true
   },
   "include": ["src"]
 }
