--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "moduleResolution": "node",
     "stripInternal": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["lib"]
 }
