--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "lint": "yarn eslint ./src/**",
-    "test": "",
+    "test": "jest",
     "build": "tsc -p ."
   },
   "license": "MIT",
@@ -23,12 +23,16 @@
     "@awdware/eslint-config-base": "^1.0.0",
     "@awdware/eslint-config-nodejs": "^1.0.0",
     "@awdware/prettier-config": "^0.0.2",
+    "@types/jest": "^26.0.24",
     "@types/node": "^14.14.20",
     "@types/slice-ansi": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.29.0",
+    "jest": "^27.0.6",
     "legally": "^3.5.10",
+    "node-terminal-emulator": "^0.0.4",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
