--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.29.0",
     "jest": "^27.0.6",
+    "jest-junit": "^12.2.0",
     "legally": "^3.5.10",
     "node-terminal-emulator": "^0.0.8",
     "ts-jest": "^27.0.3",
