--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -15,7 +15,7 @@ jobs:
         id: release
         with:
           release-type: node
-          package-name: node-terminal-emulator
+          package-name: awesome-logging
           bump-minor-pre-major: true
       - name: tag major and minor versions
         if: ${{ steps.release.outputs.release_created }}
