--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest-junit": "^12.2.0",
     "legally": "^3.5.10",
     "node-terminal-emulator": "^0.0.14",
+    "prettier": "^2.4.1",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
