--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,8 @@ jobs:
         run: yarn
       - name: Build
         run: yarn run build
+      - name: Lint
+        run: yarn run lint
       - name: Test
         run: yarn run test
       - name: Publish Unit Test Results
