--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "chalk": "^4.1.1",
+    "chalk": "^4.1.2",
     "restore-cursor": "^3.1.0",
     "slice-ansi": "^4.0.0",
     "strip-ansi": "^6.0.0"
@@ -23,20 +23,20 @@
     "@awdware/eslint-config-base": "^1.0.0",
     "@awdware/eslint-config-nodejs": "^1.0.0",
     "@awdware/prettier-config": "^0.0.2",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.3",
     "@types/node": "^14.14.20",
     "@types/slice-ansi": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.5",
-    "eslint": "^7.31.0",
-    "jest": "^27.0.6",
-    "jest-junit": "^12.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
+    "jest": "^27.3.1",
+    "jest-junit": "^13.0.0",
     "legally": "^3.5.10",
-    "node-terminal-emulator": "^0.0.14",
+    "node-terminal-emulator": "^0.1.0",
     "prettier": "^2.4.1",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.5"
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.6.0-dev.20211124"
   },
   "prettier": "@awdware/prettier-config",
   "keywords": [
