--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,3 +43,10 @@ jobs:
         with:
           token: ${{ secrets.NPM_TOKEN }}
         if: ${{ matrix.node-version == '14.x' && github.ref == 'refs/heads/main' }}
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          # Artifact name
+          name: logFile
+          # A file, directory or wildcard pattern that describes what to upload
+          path: ./log.txt
