--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "jest": "^27.4.7",
     "jest-junit": "^13.0.0",
     "legally": "^3.5.10",
-    "node-terminal-emulator": "^0.1.3",
+    "node-terminal-simulator": "^1.1.0",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "typescript": "^4.6.0-dev.20220115"
+    "typescript": "^4.6.2"
   },
   "prettier": "@awdware/prettier-config",
   "keywords": [
