--- a/package.json
+++ b/package.json
@@ -2,14 +2,26 @@
   "name": "awesome-logging",
   "version": "0.5.1",
   "description": "Advanced logging messages, interactive prompts, loading animations and more in TypeScript",
-  "main": "lib/index.js",
+  "main": "./lib/cjs/index.js",
+  "exports": {
+    ".": {
+      "import": "./lib/esm/index.js",
+      "require": "./lib/cjs/index.js"
+    }
+  },
+  "type": "module",
   "files": [
     "lib"
   ],
   "scripts": {
     "lint": "yarn eslint ./src/**",
     "test": "jest",
-    "build": "tsc -p ."
+    "build-base": "tsc -p .",
+    "prebuild": "yarn rimraf lib",
+    "build-esm": "yarn build-base --outDir lib/esm",
+    "build-cjs": "yarn build-base --outDir lib/cjs --module commonjs && yarn fix-cjs",
+    "fix-cjs": "node --loader ts-node/esm ./fix-cjs.ts",
+    "build": "yarn build-esm && yarn build-cjs"
   },
   "license": "MIT",
   "private": false,
@@ -34,9 +46,10 @@
     "legally": "^3.5.10",
     "node-terminal-simulator": "^1.2.0",
     "prettier": "^2.5.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.7.0-beta"
   },
   "prettier": "@awdware/prettier-config",
   "keywords": [
