--- a/package.json
+++ b/package.json
@@ -35,21 +35,21 @@
     "@awdware/eslint-config-base": "^1.0.0",
     "@awdware/eslint-config-nodejs": "^1.0.0",
     "@awdware/prettier-config": "^0.0.2",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^29.2.2",
     "@types/node": "^18.0.0",
     "@types/slice-ansi": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.6.0",
-    "jest": "^27.4.7",
-    "jest-junit": "^14.0.0",
+    "eslint": "^8.27.0",
+    "jest": "^29.2.2",
+    "jest-junit": "^14.0.1",
     "legally": "^3.5.10",
     "node-terminal-simulator": "^1.2.0",
-    "prettier": "^2.5.1",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.7.0-beta"
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "prettier": "@awdware/prettier-config",
   "keywords": [
