--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,13 +25,13 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install
-        run: yarn
+        run: pnpm i
       - name: Build
-        run: yarn run build
+        run: pnpm run build
       - name: Lint
-        run: yarn run lint
+        run: pnpm run lint
       - name: Test
-        run: yarn run test
+        run: pnpm run test
         env:
           FORCE_COLOR: 1
       - name: Upload Test Results Node.js ${{ matrix.node-version }}
