--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install pnpm
         run: npm i -g pnpm
       - name: Install
-        run: pnpm i
+        run: pnpm i --no-frozen-lockfile
       - name: Build
         run: pnpm run build
       - name: Lint
