--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "typescript.tsdk": "node_modules\\typescript\\lib",
-  "sonarlint.connectedMode.project": {
-    "connectionId": "loaderb0t1",
-    "projectKey": "LoaderB0T_awesome-logging"
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    ".gitignore": ".npmignore"
   }
 }
