--- a/.github/workflows/test-results.yml
+++ b/.github/workflows/test-results.yml
@@ -15,8 +15,16 @@ jobs:
 
     permissions:
       checks: write
+
       # needed unless run with comment_mode: off
       pull-requests: write
+
+      # only needed for private repository
+      contents: read
+
+      # only needed for private repository
+      issues: read
+
       # required by download step to access artifacts API
       actions: read
 
@@ -29,7 +37,7 @@ jobs:
 
           artifacts_url=${{ github.event.workflow_run.artifacts_url }}
 
-          gh api "$artifacts_url" -q '.artifacts[] | [.name, .archive_download_url] | @tsv' | while read artifact
+          gh api --paginate "$artifacts_url" -q '.artifacts[] | [.name, .archive_download_url] | @tsv' | while read artifact
           do
             IFS=$'\t' read name url <<< "$artifact"
             gh api $url > "$name.zip"
@@ -37,9 +45,9 @@ jobs:
           done
 
       - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1
+        uses: EnricoMi/publish-unit-test-result-action@v2
         with:
           commit: ${{ github.event.workflow_run.head_sha }}
           event_file: artifacts/Event File/event.json
           event_name: ${{ github.event.workflow_run.event }}
-          files: 'artifacts/**/*.xml'
+          junit_files: 'artifacts/**/*.xml'
