--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["ES2019", "ESNext"],
     "declaration": true,
     "outDir": "lib",
-    "rootDir": ".",
+    "rootDir": "./src",
     "strict": true,
     "types": ["node"],
     "sourceMap": true,
