--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,9 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES2019",
-    "module": "ESNext",
-    "baseUrl": "./",
-    "lib": ["ES2019", "ESNext"],
-    "declaration": true,
-    "outDir": "lib",
-    "rootDir": "./src",
-    "strict": true,
     "types": ["node"],
-    "sourceMap": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "strictPropertyInitialization": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "moduleResolution": "node",
-    "stripInternal": true
+    "outDir": "lib",
+    "rootDir": "./src"
   },
-  "include": ["src"],
-  "exclude": ["lib", "test"]
+  "include": ["src/**/*.ts"]
 }
