--- a/package.json
+++ b/package.json
@@ -34,24 +34,24 @@
     "strip-ansi": "^7.1.0"
   },
   "devDependencies": {
-    "@awdware/eslint-config-base": "^1.2.0",
-    "@awdware/eslint-config-nodejs": "^1.0.0",
+    "@awdware/eslint-config-base": "^2.0.0-pre3",
+    "@awdware/eslint-config-nodejs": "^2.0.0-pre3",
     "@awdware/prettier-config": "^1.0.0",
     "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^22.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.57.0",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.0",
+    "eslint": "^9.11.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "legally": "^3.5.10",
     "node-terminal-simulator": "^1.3.1",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.4",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.7.0"
   },
   "prettier": "@awdware/prettier-config",
   "keywords": [
