--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "awesome-logging",
   "version": "1.1.4",
   "description": "Advanced logging messages, interactive prompts, loading animations and more in TypeScript",
-  "main": "./lib/cjs/index.js",
+  "main": "./lib/index.js",
   "exports": {
     ".": {
-      "import": "./lib/esm/index.js",
-      "require": "./lib/cjs/index.js"
+      "import": "./lib/index.js"
     }
   },
   "type": "module",
@@ -18,41 +17,37 @@
     "lint": "pnpm eslint ./src/**",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "prebuild": "pnpm rimraf lib",
-    "build": "pnpm build-esm && pnpm build-cjs",
-    "build-base": "tsc -p .",
-    "build-esm": "pnpm build-base --outDir lib/esm",
-    "build-cjs": "pnpm build-base --outDir lib/cjs --module commonjs && pnpm fix-cjs",
-    "fix-cjs": "node --loader ts-node/esm ./fix-cjs.ts",
+    "build": "tsc -p .",
     "test-script": "node --loader ts-node/esm ./src/test.ts"
   },
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "chalk": "^5.3.0",
+    "chalk": "^5.4.1",
     "restore-cursor": "^5.1.0",
     "slice-ansi": "^7.1.0",
     "strip-ansi": "^7.1.0"
   },
   "devDependencies": {
-    "@awdware/eslint-config-base": "^2.1.0",
+    "@awdware/eslint-config-base": "^2.1.1",
     "@awdware/eslint-config-nodejs": "^2.0.0",
     "@awdware/prettier-config": "^1.0.0",
     "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^22.7.0",
-    "eslint": "^9.11.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.10",
+    "eslint": "^9.22.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "legally": "^3.5.10",
     "node-terminal-simulator": "^1.3.1",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.8.0"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
   },
   "prettier": "@awdware/prettier-config",
   "keywords": [
